# venture-vision

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  pyproject.toml  temp.md
app/agents/curation_agent/: __init__.py
app/agents/curation_agent/founders_profile_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/merger_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/parallel_research_agent/: __init__.py  agent.py
app/agents/curation_agent/problem_market_size_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/root_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/traction_and_metrics_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/unique_differentiator_finding_agent/: __init__.py  agent.py  prompt.py
app/agents/curation_agent/web_search_agent/: __init__.py  agent.py  prompt.py
app/core/extensions/: logging_extension.py
app/core/models/: __init__.py  base_model.py
app/core/schema/: api_schema.py  curation_schema.py
app/tools/: __init__.py  mcp_tools.py
app/utils/: agent_interaction.py  dates.py
app/web/: application.py  lifespan.py  settings.py
app/web/api/v1/: routes.py
app/web/api/v1/curation/: __init__.py  routes.py
app/web/api/v1/healthcheck/: routes.py
devops/dev/: Dockerfile
devops/local/: .env.docker.example  Dockerfile  docker-compose.yml
devops/prod/: Dockerfile
devops/scripts/: entrypoint.sh  streamlit-entrypoint.sh
streamlit/: .env.example  streamlit_app.py
streamlit/config/: settings.py
